--- a/src/res/layout/activity_home.xml
+++ b/src/res/layout/activity_home.xml
@@ -1,8 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+     >
 
     <TextView
         android:id="@+id/scan_format"
@@ -10,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textIsSelectable="true"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/scan_content"
@@ -18,7 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textIsSelectable="true"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textColor="@android:color/white" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -53,7 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:textIsSelectable="false" />
+            android:textIsSelectable="false"
+            android:textColor="@android:color/white" />
     </RelativeLayout>
 
 </LinearLayout>
